--- a/_posts/2016-01-02-landing.md
+++ b/_posts/2016-01-02-landing.md
@@ -11,6 +11,11 @@ On the personal front, I've been married happily for 6 years now. I have 2 young
 
 ### What I enjoy doing in my free time
 * I read a lot! I am now working through Isaac Asimov's series
-* I like building things - I just got an Arduino which will soon be managing my vertical blinds. I want to program it to open my blinds from 30 min before sunrise, slowly.
+* I like building things - I just got an [Arduino](https://www.arduino.cc/en/Main/ArduinoBoardMicro) which will soon be managing my vertical blinds. I want to program it to open my blinds from 30 min before sunrise, slowly.
 * I've just started learning the Violin. I've been wanting to play the Violin for ever.
 * I also got an [Amazon Echo Dot](https://goo.gl/xWmyJG) recently and am trying to wire everything up to it by having things emulate Belkin devices.
+
+### Other things you might care about
+* [My github profile](https://github.com/vikrambodicherla)
+* [My LinkedIn profile](https://www.linkedin.com/in/vikrambodicherla)
+* [Yahoo Finance for Android](https://play.google.com/store/apps/details?id=com.yahoo.mobile.client.android.finance)
